@@ -1,3 +1,10 @@
+2015-08-23  Torbjörn Granlund  <torbjorng@google.com>
+
+	* mpn/x86_64/fat/fat.c (__gmpn_cpuvec_init): Add more entries, handle
+	Broadwell separately.
+
+	* configure.ac (fat_path): Add coreibwl.
+
 2015-08-18 Marco Bodrato <bodrato@mail.dm.unipi.it>
 
 	* mpn/generic/rootrem.c (logbased_root): New function.
